--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Example App</title>
-    <link rel="stylesheet" href="/css/app.css">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/app.css">
 </head>
 
 <body>
@@ -18,6 +19,8 @@
 
     {{> footer}}
 
+    <script src="/jquery/jquery.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 </body>
 
 </html>
