#Commit 01/03/2022: Add project connect database.

--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -12,11 +12,16 @@
 
 <body>
     <div class="container">
+        {{#if show }}
         {{> header}}
+        {{/if}}
 
         <main>{{{body}}}</main>
 
+
+        {{#if show}}
         {{> footer}}
+        {{/if}}
     </div>
 
     <script src="/jquery/jquery.js"></script>
