--- a/src/resource/scss/login.scss
+++ b/src/resource/scss/login.scss
@@ -1,5 +1,13 @@
-.login_page {
-    background-color: red;
-    height: 300px;
-    width: 200px;
+.login-wrapper {
+    height: 100vh;
+    .row {
+        height: 100vh;
+        .form--title {
+            margin-bottom: 20px;
+            text-transform: uppercase;
+        }
+        .login--form {
+            display: block;
+        }
+    }
 }
