--- a/src/resource/views/components/site/login.hbs
+++ b/src/resource/views/components/site/login.hbs
@@ -10,18 +10,26 @@
 </head>
 
 <body>
-    <div class="login-component">
-        <form method="post">
-            <div class="form-group">
-                <label for="user_email">Email address</label>
-                <input type="email" name="email" class="form-control" id="user_email">
+
+    <div class="login-wrapper">
+        <div class="row d-flex align-items-center justify-content-center">
+            <div class="col-4">
+                <h2 class="form--title text-center">Coder Udemy</h2>
+                <form class="login--form" id="user_login" method="POST">
+                    <div class="form-group">
+                        <label for="user_email">Email address</label>
+                        <input type="email" name="email" class="form-control" id="user_email">
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" name="password" class="form-control" id="user_password">
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary w-100">Submit</button>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" name="password" class="form-control" id="password">
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+        </div>
     </div>
 </body>
 
