--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -11,18 +11,17 @@
 </head>
 
 <body>
+    {{#if show }}
+    {{> header}}
+    {{/if}}
+
     <div class="container">
-        {{#if show }}
-        {{> header}}
-        {{/if}}
-
         <main>{{{body}}}</main>
-
-
-        {{#if show}}
-        {{> footer}}
-        {{/if}}
     </div>
+
+    {{!-- {{#if show}}
+    {{> footer}}
+    {{/if}} --}}
 
     <script src="/jquery/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
