--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -11,7 +11,21 @@
 
 <body>
     <header>
-        <h1>HEADER</h1>
+        <div class="header-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-3 header-logo">Logo</div>
+                    <div class="col-9 header-redirect">
+                        <ul class="list-unstyled d-flex align-items-center justify-content-end">
+                            <li><a href="/home">Trang chu</a></li>
+                            <li><a href="/course">Khoa hoc</a></li>
+                            <li><a href="/news">Bai viet</a></li>
+                            <li><a href="/users">Nguoi dung</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 </body>
 
