# Commit 03/03/2022: Add method update user.

--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,24 +1,28 @@
 header {
   height: 60px;
   width: 100%; }
-  header .header-wrapper {
-    background-color: #366595;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: inherit;
-    left: 0px;
-    position: fixed;
-    top: 0px;
-    width: 100%; }
-    header .header-wrapper .header-redirect ul {
-      margin-bottom: 0; }
-      header .header-wrapper .header-redirect ul li a {
-        color: #ffffff;
-        display: inline-block;
-        letter-spacing: 0.2px;
-        padding: 0 15px;
-        text-decoration: none;
-        text-transform: uppercase; }
+
+header .header-wrapper {
+  background-color: #366595;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: inherit;
+  left: 0px;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 100; }
+
+header .header-wrapper .header-redirect ul {
+  margin-bottom: 0; }
+
+header .header-wrapper .header-redirect ul li a {
+  color: #ffffff;
+  display: inline-block;
+  letter-spacing: 0.2px;
+  padding: 0 15px;
+  text-decoration: none;
+  text-transform: uppercase; }
 
 /*# sourceMappingURL=../../../false/header.css.map */
