--- a/src/resource/views/components/users/index.hbs
+++ b/src/resource/views/components/users/index.hbs
@@ -29,8 +29,8 @@
                     <td>[{{this.skill}}]</td>
                     <td>{{this.age}}</td>
                     <td>
-                        <button type="button"><a href="/users/detail?id={{this._id}}">Update</a></button>
-                        <button type="button"><a href="/users/detail?id={{this._id}}">Delete</a></button>
+                        <button type="button"><a href="/users/detail?t=u&&id={{this._id}}">Update</a></button>
+                        <button type="button"><a href="/users/detail?t=d&&id={{this._id}}">Delete</a></button>
                     </td>
                 </tr>
                 {{/each}}
