--- a/src/resource/views/partials/footer.hbs
+++ b/src/resource/views/partials/footer.hbs
@@ -1,3 +1,29 @@
 <footer>
-    <h1>FOOTER</h1>
+    <div class="container py-4">
+        <div class="row">
+            <div class="col-6 d-flex align-items-center">
+                <h2 class="footer-logo mb-0">Code udemy</h2>
+                <div class="nav-footer">
+                    <ul class="list-unstyled d-flex align-items-center mb-0">
+                        <li><a href="#">Trang chủ</a></li>
+                        <li><a href="#">Khóa học</a></li>
+                        <li><a href="#">Bài viết</a></li>
+                        <li><a href="#">Người dùng</a></li>
+                    </ul>
+                    <p class="mb-0 nav-des">Coppy right by DuyNguyen -- 03-03/2022</p>
+                </div>
+            </div>
+            <div class="col-6 d-flex align-items-center justify-content-center">
+                <div class="footer-social">
+                    <ul class="list-unstyled d-flex align-items-center justify-content-center mb-0">
+                        <li><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
+                    </ul>
+                    <p class="mb-0 social-des">Support phuongduynguyen75@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </div>
 </footer>
