--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,28 +1,34 @@
 header {
   height: 60px;
   width: 100%; }
-
-header .header-wrapper {
-  background-color: #366595;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: inherit;
-  left: 0px;
-  position: fixed;
-  top: 0px;
-  width: 100%;
-  z-index: 100; }
-
-header .header-wrapper .header-redirect ul {
-  margin-bottom: 0; }
-
-header .header-wrapper .header-redirect ul li a {
-  color: #ffffff;
-  display: inline-block;
-  letter-spacing: 0.2px;
-  padding: 0 15px;
-  text-decoration: none;
-  text-transform: uppercase; }
+  header .header-wrapper {
+    background-color: #031b3d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: inherit;
+    left: 0px;
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    z-index: 100; }
+    header .header-wrapper .header-logo {
+      color: #ffffff;
+      font-size: 25px;
+      font-weight: bold;
+      letter-spacing: .2px;
+      vertical-align: middle;
+      text-transform: uppercase; }
+    header .header-wrapper .header-redirect ul {
+      margin-bottom: 0; }
+      header .header-wrapper .header-redirect ul li a {
+        color: #ffffff;
+        display: inline-block;
+        letter-spacing: 0.5px;
+        font-size: 15px;
+        font-weight: 700;
+        padding: 0 15px;
+        text-decoration: none;
+        text-transform: uppercase; }
 
 /*# sourceMappingURL=../../../false/header.css.map */
