--- a/src/resource/scss/header.scss
+++ b/src/resource/scss/header.scss
@@ -1,8 +1,10 @@
+@import "./_variables.scss";
+
 header {
     height: 60px;
     width: 100%;
     .header-wrapper {
-        background-color: #366595;
+        background-color: $web-background;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -12,6 +14,14 @@ header {
         top: 0px;
         width: 100%;
         z-index: 100;
+        .header-logo {
+            color: #ffffff;
+            font-size: 25px;
+            font-weight: bold;
+            letter-spacing: .2px;
+            vertical-align: middle;
+            text-transform: uppercase;
+        }
         .header-redirect {
             ul {
                 margin-bottom: 0;
@@ -19,7 +29,9 @@ header {
                     a {
                         color: #ffffff;
                         display: inline-block;
-                        letter-spacing: 0.2px;
+                        letter-spacing: 0.5px;
+                        font-size: 15px;
+                        font-weight: 700;
                         padding: 0 15px;
                         text-decoration: none;
                         text-transform: uppercase;
