--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -19,12 +19,13 @@
         <main>{{{body}}}</main>
     </div>
 
-    {{!-- {{#if show}}
+    {{#if show}}
     {{> footer}}
-    {{/if}} --}}
+    {{/if}}
 
     <script src="/jquery/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="https://use.fontawesome.com/3e1a7eaa5a.js"></script>
 </body>
 
 </html>
