--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -13,14 +13,14 @@
     <header>
         <div class="header-wrapper">
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-3 header-logo">Logo</div>
+                <div class="row align-items-center">
+                    <div class="col-3 header-logo">Code udemy</div>
                     <div class="col-9 header-redirect">
                         <ul class="list-unstyled d-flex align-items-center justify-content-end">
-                            <li><a href="/home">Trang chu</a></li>
-                            <li><a href="/course">Khoa hoc</a></li>
-                            <li><a href="/news">Bai viet</a></li>
-                            <li><a href="/users">Nguoi dung</a></li>
+                            <li><a href="/home">Trang chủ</a></li>
+                            <li><a href="/course">Khóa học</a></li>
+                            <li><a href="/news">Bài viết</a></li>
+                            <li><a href="/users">Người dùng</a></li>
                         </ul>
                     </div>
                 </div>
