--- a/src/resource/views/components/users/index.hbs
+++ b/src/resource/views/components/users/index.hbs
@@ -11,8 +11,11 @@
 
 <body>
     <div class="user my-5">
-        <div class="d-flex align-items-center justify-content-end">
-            <button id="create-btn">Create user</button>
+        <div class="d-flex align-items-center justify-content-between">
+            <h3 class="title-table">Thông tin người dùng</h3>
+            <button class="btn btn-primary" id="create-btn" data-toggle="modal" data-target="#exampleModal">
+                <i class="fa fa-plus mr-2" aria-hidden="true"></i>Thêm mới
+            </button>
         </div>
         <table class="table mb-0">
             <thead class="thead-dark">
@@ -33,8 +36,10 @@
                     <td>[{{this.skill}}]</td>
                     <td>{{this.age}}</td>
                     <td>
-                        <button type="button"><a href="/users/detail?t=u&&id={{this._id}}">Update</a></button>
-                        <button type="button"><a href="/users/detail?t=d&&id={{this._id}}">Delete</a></button>
+                        <button type="button" class="btn btn-primary"><a
+                                href="/users/detail?t=u&&id={{this._id}}">Sửa</a></button>
+                        <button type="button" class="btn btn-danger"><a
+                                href="/users/detail?t=d&&id={{this._id}}">Xóa</a></button>
                     </td>
                 </tr>
                 {{/each}}
