--- a/src/resource/scss/users.scss
+++ b/src/resource/scss/users.scss
@@ -9,6 +9,16 @@
         font-weight: 700;
         text-transform: uppercase;
     }
+    .add-user {
+        a {
+            color: #ffffff;
+            font-size: 14px;
+            font-weight: 700;
+            letter-spacing: .3px;
+            text-decoration: none;
+            text-transform: uppercase;
+        }
+    }
     .table {
         margin-top: 15px;
         .thead-dark {
@@ -28,6 +38,35 @@
                     }
                 }
             }
+        }
+    }
+}
+
+// USER-DETAIL
+.users-detail {
+    border: 1px solid #cccccc;
+    background-color: #f7f7f736;
+    padding: 25px 15px;
+    .users-detail--title {
+        font-size: 25px;
+        font-weight: 700;
+        letter-spacing: .3px;
+        margin-bottom: 30px;
+        text-transform: uppercase;
+    }
+
+    #users-detail--info {
+        .title--input {
+            font-size: 13px;
+            font-weight: 700;
+            letter-spacing: .3px;
+            text-transform: uppercase;
+        }
+        .input--status-title {
+            font-size: 14px;
+        }
+        .form-control {
+            font-size: 14px;
         }
     }
 }
