--- a/src/resource/views/components/users/userDetail.hbs
+++ b/src/resource/views/components/users/userDetail.hbs
@@ -10,55 +10,60 @@
 </head>
 
 <body>
-
-    <div class="users-detail mt-5">
+    <div class="users-detail my-5">
+        <h2 class="users-detail--title">User detail title</h2>
         <form id="users-detail--info">
             <div class="row">
-                <div class="form-group col-6">
-                    <label for="user-name">User name</label>
-                    <input type="text" class="form-control" id="user-name" placeholder="User name"
-                        value="{{user.user_name}}">
-                </div>
-                <div class="form-group col-6">
-                    <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Email" value="{{user.email}}">
-                </div>
-                <div class="form-group col-6">
-                    <label for="password">Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="Password"
-                        value="{{user.password}}">
-                </div>
-
-                <div class="form-group col-6">
-                    <label for="age">Age</label>
-                    <input type="text" class="form-control" id="age" placeholder="Age" value="{{user.age}}">
-                </div>
-
-                <div class="form-group col-6">
-                    <label for="exampleInputPassword1">Status</label>
-                    <div class="custom-control custom-radio">
-                        <input type="radio" id="no-action" name="status" value="no-action" class="custom-control-input">
-                        <label class="custom-control-label" for="no-action">No Action</label>
+                <div class="col-6">
+                    <div class="form-group">
+                        <label class="title--input" for="user-name">Tên người dùng</label>
+                        <input type="text" class="form-control" id="user-name" placeholder="Họ và tên"
+                            value="{{user.user_name}}">
                     </div>
-                    <div class="custom-control custom-radio">
-                        <input type="radio" id="action" name="status" value="action" class="custom-control-input" {{#if
-                            user.status }} checked {{/if}}>
-                        <label class="custom-control-label" for="action">Action</label>
+                    <div class="form-group">
+                        <label class="title--input" for="email">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Địa chỉ email"
+                            value="{{user.email}}">
+                    </div>
+                    <div class="form-group">
+                        <label class="title--input" for="password">Mật khẩu</label>
+                        <input type="password" class="form-control" id="password" placeholder="Mật khẩu"
+                            value="{{user.password}}">
                     </div>
                 </div>
-
-                <div class="form-group col-6">
-                    <label for="skills">Skills</label>
-                    <textarea class="form-control" id="skills" rows="3">{{user.skill}}</textarea>
+                <div class="col-6">
+                    <div class="form-group">
+                        <label class="title--input" for="age">Tuổi</label>
+                        <input type="text" class="form-control" id="age" placeholder="Tuổi" value="{{user.age}}">
+                    </div>
+                    <div class="form-group">
+                        <label class="title--input" for="exampleInputPassword1">Trạng thái</label>
+                        <div class="wrapper-status d-flex align-items-center">
+                            <div class="custom-control custom-radio mr-3">
+                                <input type="radio" id="action" name="status" value="action"
+                                    class="custom-control-input" {{#if user.status }} checked {{/if}}>
+                                <label class="custom-control-label input--status-title" for="action">Hoạt động</label>
+                            </div>
+                            <div class="custom-control custom-radio">
+                                <input type="radio" id="no-action" name="status" value="no-action"
+                                    class="custom-control-input">
+                                <label class="custom-control-label input--status-title" for="no-action">Không hoạt
+                                    động</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="title--input" for="skills">Chuyên môn</label>
+                        <textarea class="form-control" id="skills" rows="5">{{user.skill}}</textarea>
+                    </div>
                 </div>
-
                 <div class="form-group col-6">
-                    <button type="submit" class="btn btn-primary w-100">Submit</button>
+                    <button type="submit" class="btn btn-primary w-100 users-detail--btn">Submit</button>
                 </div>
             </div>
         </form>
     </div>
-    <script type="module" src="/static/js/user.js"></script>
+    <script src="/static/js/userDetail.js"></script>
 </body>
 
 </html>
