--- a/src/resource/views/partials/footer.hbs
+++ b/src/resource/views/partials/footer.hbs
@@ -28,24 +28,24 @@
     </div>
 </footer>
 
+
 <!-- MODAL ADD USER -->
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<div class="modal fade" id="deleteUser" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Xóa thông tin người dùng</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                ...
+                Bạn có chắc muốn xóa người dùng này!!!
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-danger" id="delete-user">Cập nhật</button>
+                <button type="button" class="btn btn-primary" id="delete-user-close" data-dismiss="modal">Hủy</button>
             </div>
         </div>
     </div>
