#Commit 05/03/2022 Reafactor resource code.

--- a/src/resource/views/components/users/index.hbs
+++ b/src/resource/views/components/users/index.hbs
@@ -34,7 +34,6 @@
                     <td>{{this.email}}</td>
                     <td>{{this.password}}</td>
                     <td>{{this.status}}</td>
-                    <td>[{{this.skill}}]</td>
                     <td>{{this.age}}</td>
                     <td>
                         <button type="button" class="btn btn-primary">
@@ -48,6 +47,27 @@
             </tbody>
         </table>
     </div>
+
+    <!-- Pagination -->
+    <nav aria-label="Page navigation example">
+        <ul class="pagination d-flex align-items-center justify-content-center">
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 
     <script src="/static/js/user.js"></script>
 </body>
