--- a/src/resource/views/components/site/login.hbs
+++ b/src/resource/views/components/site/login.hbs
@@ -15,7 +15,7 @@
         <div class="row d-flex align-items-center justify-content-center">
             <div class="col-4">
                 <h2 class="form--title text-center">Coder Udemy</h2>
-                <form class="login--form" id="user_login" method="POST">
+                <form class="login--form">
                     <div class="form-group">
                         <label for="user_email">Email address</label>
                         <input type="email" name="email" class="form-control" id="user_email">
@@ -25,12 +25,13 @@
                         <input type="password" name="password" class="form-control" id="user_password">
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary w-100">Submit</button>
+                        <button type="button" id="user_login" class="btn btn-primary w-100">Submit</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
+    <script src="/static/js/login.js"></script>
 </body>
 
 </html>
