--- a/src/resource/views/components/users/index.hbs
+++ b/src/resource/views/components/users/index.hbs
@@ -51,21 +51,21 @@
     <!-- Pagination -->
     <nav aria-label="Page navigation example">
         <ul class="pagination d-flex align-items-center justify-content-center">
-            <li class="page-item">
+            {{!-- <li class="page-item">
                 <a class="page-link" href="#" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                     <span class="sr-only">Previous</span>
                 </a>
-            </li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item">
+            </li> --}}
+            <li class="page-item">1</li>
+            <li class="page-item">2</li>
+            <li class="page-item">3</li>
+            {{!-- <li class="page-item">
                 <a class="page-link" href="#" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                     <span class="sr-only">Next</span>
                 </a>
-            </li>
+            </li> --}}
         </ul>
     </nav>
 
