--- a/src/resource/views/components/users/index.hbs
+++ b/src/resource/views/components/users/index.hbs
@@ -18,16 +18,12 @@
                 <a href="/users/detail?type=create">Thêm mới</a>
             </button>
         </div>
-        <table class="table mb-0">
+        <table class="table mb-0" id="user-table">
             <thead class="thead-dark">
-                <tr>
-                    {{#each keys}}
-                    <th>{{this}}</th>
-                    {{/each}}
-                </tr>
+                <tr id="user-table-header"></tr>
             </thead>
-            <tbody>
-                {{#each users}}
+            <tbody id="user-table-body">
+                {{!-- {{#each users}}
                 <tr>
                     <td>{{@index}}</td>
                     <td>{{this.user_name}}</td>
@@ -43,7 +39,7 @@
                             data-whatever="{{this._id}}" data-id="{{this._id}}" data-target="#deleteUser">Xóa</button>
                     </td>
                 </tr>
-                {{/each}}
+                {{/each}} --}}
             </tbody>
         </table>
     </div>
@@ -57,9 +53,9 @@
                     <span class="sr-only">Previous</span>
                 </a>
             </li> --}}
-            <li class="page-item">1</li>
-            <li class="page-item">2</li>
-            <li class="page-item">3</li>
+            <li class="page-items" data-id="1">1</li>
+            <li class="page-items" data-id="2">2</li>
+            <li class="page-items" data-id="3">3</li>
             {{!-- <li class="page-item">
                 <a class="page-link" href="#" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
