--- a/src/resource/views/components/users/index.hbs
+++ b/src/resource/views/components/users/index.hbs
@@ -23,23 +23,6 @@
                 <tr id="user-table-header"></tr>
             </thead>
             <tbody id="user-table-body">
-                {{!-- {{#each users}}
-                <tr>
-                    <td>{{@index}}</td>
-                    <td>{{this.user_name}}</td>
-                    <td>{{this.email}}</td>
-                    <td>{{this.password}}</td>
-                    <td>{{this.status}}</td>
-                    <td>{{this.age}}</td>
-                    <td>
-                        <button type="button" class="btn btn-primary">
-                            <a href="/users/detail?type=update&id={{this._id}}">Sửa</a>
-                        </button>
-                        <button type="button" class="btn btn-danger btn-delete-user" data-toggle="modal"
-                            data-whatever="{{this._id}}" data-id="{{this._id}}" data-target="#deleteUser">Xóa</button>
-                    </td>
-                </tr>
-                {{/each}} --}}
             </tbody>
         </table>
     </div>
@@ -47,25 +30,13 @@
     <!-- Pagination -->
     <nav aria-label="Page navigation example">
         <ul class="pagination d-flex align-items-center justify-content-center">
-            {{!-- <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                </a>
-            </li> --}}
-            <li class="page-items" data-id="1">1</li>
-            <li class="page-items" data-id="2">2</li>
-            <li class="page-items" data-id="3">3</li>
-            {{!-- <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </li> --}}
+            {{!-- <li class="page-items" data-id="1"><a class="page-link">1</a></li>
+            <li class="page-items" data-id="2"><a class="page-link">2</a></li>
+            <li class="page-items" data-id="3"><a class="page-link">3</a></li> --}}
         </ul>
     </nav>
 
-    <script src="/static/js/user.js"></script>
+    <script type="module" src="/static/js/user.js"></script>
 </body>
 
 </html>
