--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Example App</title>
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    {{!--
+    <link href="./css/bootstrap.min.css" rel="stylesheet"> --}}
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/app.css">
 </head>
 
@@ -23,8 +25,8 @@
     {{> footer}}
     {{/if}}
 
-    <script src="./jquery/jquery.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
+    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/3e1a7eaa5a.js"></script>
 </body>
 
