--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -8,7 +8,7 @@
     <title>Example App</title>
     {{!--
     <link href="./css/bootstrap.min.css" rel="stylesheet"> --}}
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/app.css">
 </head>
 
