--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -25,7 +25,7 @@
     {{> footer}}
     {{/if}}
 
-    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/jquery.min.js"></script>
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/3e1a7eaa5a.js"></script>
 </body>
