--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -67,3 +67,23 @@ footer {
         }
     }
 }
+
+// MODAL LOADER
+.modal-loader {
+    background-color: #ebebeb82;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    left: 0px;
+    top: 0px;
+    position: fixed;
+    width: 100%;
+    img {
+        width: 450px;
+    }
+}
+
+.modal-loader.active {
+    display: flex;
+}
