--- a/src/resource/views/components/site/login.hbs
+++ b/src/resource/views/components/site/login.hbs
@@ -17,21 +17,31 @@
                 <h2 class="form--title text-center">Coder Udemy</h2>
                 <form class="login--form">
                     <div class="form-group">
-                        <label for="user_email">Email address</label>
-                        <input type="email" name="email" class="form-control" id="user_email">
+                        <label for="user_email">Tài khoản email</label>
+                        <input class="form-control" data-id="email-feedback" type="email" name="email" id="user_email"
+                            placeholder="Nhập email">
+                        <div class="invalid-feedback" id="email-feedback">Please choose a username.</div>
                     </div>
                     <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" name="password" class="form-control" id="user_password">
+                        <label for="password">Mật khẩu</label>
+                        <input class="form-control" data-id="password-feedback" type="password" name="password"
+                            id="user_password" placeholder="Nhập mật khẩu">
+                        <div class="invalid-feedback" id="password-feedback">Please choose a username.</div>
                     </div>
                     <div class="form-group">
-                        <button type="button" id="user_login" class="btn btn-primary w-100">Submit</button>
+                        <button type="button" id="user_login" class="btn btn-primary w-100">Đăng nhập</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-    <script src="/static/js/login.js"></script>
+
+    <!-- MODAL LOADER -->
+    <div class="modal-loader">
+        <img src="/static/img/loader.gif" alt="loader">
+    </div>
+
+    <script type="module" src="/static/js/login.js"></script>
 </body>
 
 </html>
