#Commit 13/03/2022: Add common validation field

--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -13,6 +13,11 @@
 </head>
 
 <body>
+    <!-- MODAL LOADER -->
+    <div class="modal-loader">
+        <img src="/static/img/loader.gif" alt="loader">
+    </div>
+
     {{#if show }}
     {{> header}}
     {{/if}}
