--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -53,7 +53,8 @@ footer {
   left: 0px;
   top: 0px;
   position: fixed;
-  width: 100%; }
+  width: 100%;
+  z-index: 100; }
   .modal-loader img {
     width: 450px; }
 
