--- a/src/resource/views/components/users/userDetail.hbs
+++ b/src/resource/views/components/users/userDetail.hbs
@@ -54,7 +54,7 @@
                     </div>
                     <div class="form-group">
                         <label class="title--input" for="skills">Chuyên môn</label>
-                        <textarea class="form-control" id="skills" rows="5">{{user.skill}}</textarea>
+                        <textarea class="form-control" id="skills" rows="5">{{user.skills}}</textarea>
                     </div>
                 </div>
                 <div class="form-group col-6">
