#Commit 15/03/2022: Refactor method http service v-01

--- a/src/resource/views/components/users/userDetail.hbs
+++ b/src/resource/views/components/users/userDetail.hbs
@@ -63,7 +63,7 @@
             </div>
         </form>
     </div>
-    <script src="/static/js/userDetail.js"></script>
+    <script type="module" src="/static/js/userDetail.js"></script>
 </body>
 
 </html>
