--- a/src/resource/views/components/users/userDetail.hbs
+++ b/src/resource/views/components/users/userDetail.hbs
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+    <div class="breadcrumd">
+        <ul class="list-unstyled">
+            <li><a href="/home">Trang chủ</a></li>
+            <li><a href="/users">Người dùng</a></li>
+            <li><span>Chi tiết người dùng</span></li>
+        </ul>
+    </div>
     <div class="users-detail my-5">
         <h2 class="users-detail--title">User detail title</h2>
         <form id="users-detail--info">
