--- a/src/assets/css/users.css
+++ b/src/assets/css/users.css
@@ -1,6 +1,8 @@
 .user {
   border: 1px solid #cccccc;
   background-color: #f7f7f736;
+  height: 600px;
+  max-height: 600px;
   padding: 15px; }
   .user .title-table {
     font-size: 20px;
