--- a/src/resource/scss/users.scss
+++ b/src/resource/scss/users.scss
@@ -3,6 +3,8 @@
 .user {
     border: 1px solid #cccccc;
     background-color: #f7f7f736;
+    height: 600px;
+    max-height: 600px;
     padding: 15px;
     .title-table {
         font-size: 20px;
