--- a/src/resource/views/components/users/index.hbs
+++ b/src/resource/views/components/users/index.hbs
@@ -10,7 +10,15 @@
 </head>
 
 <body>
-    <div class="user my-5">
+
+    <div class="breadcrumd">
+        <ul class="list-unstyled">
+            <li><a href="/home">Trang chủ</a></li>
+            <li><span>Người dùng</span></li>
+        </ul>
+    </div>
+
+    <div class="user my-3">
         <div class="d-flex align-items-center justify-content-between">
             <h3 class="title-table">Thông tin người dùng</h3>
             <button class="btn btn-primary add-user" id="create-btn">
@@ -29,11 +37,7 @@
 
     <!-- Pagination -->
     <nav aria-label="Page navigation example">
-        <ul class="pagination d-flex align-items-center justify-content-center">
-            {{!-- <li class="page-items" data-id="1"><a class="page-link">1</a></li>
-            <li class="page-items" data-id="2"><a class="page-link">2</a></li>
-            <li class="page-items" data-id="3"><a class="page-link">3</a></li> --}}
-        </ul>
+        <ul class="pagination d-flex align-items-center justify-content-center"></ul>
     </nav>
 
     <script type="module" src="/static/js/user.js"></script>
