--- a/src/resource/views/layouts/main.hbs
+++ b/src/resource/views/layouts/main.hbs
@@ -20,7 +20,7 @@
     {{> header}}
     {{/if}}
 
-    <div class="container">
+    <div class="container-fluid">
         <main>{{{body}}}</main>
     </div>
 
