--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -8,6 +8,32 @@
   text-transform: uppercase;
   display: block; }
 
+.document-component .component-items {
+  overflow: hidden;
+  position: relative; }
+  .document-component .component-items .component-items--content {
+    color: #ffffff;
+    background-color: #00000017;
+    position: absolute;
+    left: 0px;
+    bottom: -110px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    padding: 5px 10px;
+    width: 100%; }
+    .document-component .component-items .component-items--content .content-title {
+      font-size: 21px;
+      letter-spacing: .2px;
+      text-transform: uppercase; }
+    .document-component .component-items .component-items--content .content-description {
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis; }
+  .document-component .component-items:hover .component-items--content, .document-component .component-items:focus .component-items--content {
+    bottom: 0px; }
+
 .breadcrumd {
   margin-top: 30px; }
   .breadcrumd ul {
