--- a/src/resource/scss/users.scss
+++ b/src/resource/scss/users.scss
@@ -34,6 +34,7 @@
         tbody {
             td {
                 font-size: 15px;
+                vertical-align: middle;
                 .btn {
                     a {
                         color: #ffffff;
