--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -12,6 +12,47 @@
     display: block;
 }
 
+.sliders-component {
+    height: 100vh;
+    ul {
+        box-shadow: 0 0 2px #00000030;
+        height: 100%;
+        left: 0px;
+        position: fixed;
+        padding: 15px;
+        top: 60px;
+        width: 190px;
+        li {
+            &:not(:first-child) {
+                margin-top: 15px;
+            }
+            a {
+                border: unset;
+                border-radius: 8px;
+                background-color: transparent;
+                box-shadow: 0 0 1px 1px #0000001f;
+                color: #000000;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 65px;
+                font-size: 11px;
+                flex-direction: column;
+                text-decoration: none;
+                text-transform: uppercase;
+                width: 100%;
+                i.fa {
+                    font-size: 15px;
+                    margin-bottom: 5px;
+                }
+                &:hover {
+                    text-decoration: none;
+                }
+            }
+        }
+    }
+}
+
 .document-component {
     .component-items {
         overflow: hidden;
