--- a/src/resource/views/components/site/home.hbs
+++ b/src/resource/views/components/site/home.hbs
@@ -11,11 +11,28 @@
 <body>
     <div class="document-component my-5">
         <div class="row">
-            <div class="col-3">sidebar</div>
-            <div class="col-9 collection-component">
+            <div class="col-2">
+                <div class="sliders-component">
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+                                <span>Người dùng</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-power-off" aria-hidden="true"></i>
+                                <span>Đăng xuất</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-10 collection-component">
                 <div class="row">
                     <div class="col-4">
-                        <a href="#" class="component-items d-block">
+                        <a href="/courses" class="component-items d-block">
                             <img class="img-fluid component-items--thumbnail" src="/static/img/course.jpg" alt="">
                             <div class="component-items--content">
                                 <h2 class="content-title">Quản trị Khóa học</h2>
