--- a/src/resource/views/partials/header.hbs
+++ b/src/resource/views/partials/header.hbs
@@ -16,12 +16,12 @@
                 <div class="row align-items-center">
                     <div class="col-3 header-logo">Code udemy</div>
                     <div class="col-9 header-redirect">
-                        <ul class="list-unstyled d-flex align-items-center justify-content-end">
+                        {{!-- <ul class="list-unstyled d-flex align-items-center justify-content-end">
                             <li><a href="/home">Trang chủ</a></li>
-                            <li><a href="/course">Khóa học</a></li>
+                            <li><a href="/courses">Khóa học</a></li>
                             <li><a href="/news">Bài viết</a></li>
                             <li><a href="/users">Người dùng</a></li>
-                        </ul>
+                        </ul> --}}
                     </div>
                 </div>
             </div>
