#Commit 17/03/2022: Add function render template

--- a/src/resource/views/components/users/index.hbs
+++ b/src/resource/views/components/users/index.hbs
@@ -31,8 +31,7 @@
                 <thead class="thead-dark">
                     <tr id="user-table-header"></tr>
                 </thead>
-                <tbody id="user-table-body">
-                </tbody>
+                <tbody id="user-table-body"></tbody>
             </table>
         </div>
 
